Lan House Jóinha

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>Lan House Joinha</title>
+	<title>Lan House Jóinha</title>
 </head>
 <body>
-	<h1>Sobre a Lan House Joinha</h1>
+	<h1>Sobre a Lan House Jóinha</h1>
 
-	<p>Localizada no coração da cidade a <strong>Lan House Joinha</strong> traz para o mercado a melhor Lan House . Fundada em 2019, a Lan House Joinha já é destaque na cidade e conquista novos clientes a cada dia.</p>
+	<p>Localizada no coração da cidade a <strong>Lan House Jóinha</strong> traz para o mercado a melhor Lan House . Fundada em 2019, a Lan House Jóinha já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
  	<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
